--- a/frontend/src/components/loading/loading.scss
+++ b/frontend/src/components/loading/loading.scss
@@ -1,7 +1,89 @@
 .loading {
+	width: 100%;
+	padding: 80px 20px;
 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
 
 .loading__text {
+	font-family: var(--basic-font);
+	font-size: 18px;
+	font-weight: 600;
+	color: var(--text-primary);
+	text-transform: uppercase;
+}
 
+
+$loader--width: 250px;
+$loader-dot--size: 20px;
+
+.loader {
+  height: $loader-dot--size;
+  width: $loader--width;
+
+  &--dot {
+		animation-name: loader;
+		animation-timing-function: ease-in-out;
+		animation-duration: 3s;
+		animation-iteration-count: infinite;
+    height: $loader-dot--size;
+    width: $loader-dot--size;
+    border-radius: 100%;
+    background-color: black;
+    position: absolute;
+    border: 2px solid white;
+
+    &:first-child {
+      background-color: #8cc759;
+      animation-delay: 0.5s;
+		}
+
+    &:nth-child(2) {
+      background-color: #8c6daf;
+      animation-delay: 0.4s;
+		}
+
+    &:nth-child(3) {
+      background-color: #ef5d74;
+      animation-delay: 0.3s;
+		}
+
+    &:nth-child(4) {
+      background-color: #f9a74b;
+      animation-delay: 0.2s;
+		}
+
+    &:nth-child(5) {
+      background-color: #60beeb;
+      animation-delay: 0.1s;
+		}
+
+    &:nth-child(6) {
+      background-color: #fbef5a;
+      animation-delay: 0s;
+		}
+	}
+}
+
+
+@keyframes loader {
+	15% {
+		transform: translateX(0);
+	}
+
+	45% {
+		transform: translateX($loader--width - $loader-dot--size);
+	}
+
+	65% {
+		transform: translateX($loader--width - $loader-dot--size);
+	}
+
+	95% {
+		transform: translateX(0);
+	}
 }
