--- a/frontend/src/components/reports-list/reports-list-item/card-data/card-data.scss
+++ b/frontend/src/components/reports-list/reports-list-item/card-data/card-data.scss
@@ -1,17 +1,20 @@
 .card-data {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr min-content;
 }
 
 .card-data-item {
 	display: flex;
 	align-items: center;
+	padding: 3px 0;
 
 	font-family: var(--basic-font);
 	font-size: 13px;
 	font-weight: 400;
 	color: var(--text-primary);
 	text-transform: uppercase;
+
+	white-space: nowrap;
 
 	&--title {
 		justify-content: start;
@@ -20,6 +23,5 @@
 	&--value {
 		justify-content: end;
 		font-weight: 600;
-		white-space: nowrap;
 	}
 }
