--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -16,7 +16,7 @@
 }
 
 .container {
-  max-width: $mobile-width;
+  max-width: $desctope-width;
   margin: 0 auto;
 }
 
@@ -31,6 +31,7 @@
   width: 100%;
   height: 100%;
 	min-height: 100vh;
+	background-color: var(--bg);
 }
 
 // disable text selection
