--- a/frontend/src/pages/index-page/index-page.scss
+++ b/frontend/src/pages/index-page/index-page.scss
@@ -8,6 +8,8 @@
 	grid-template-columns: 1fr;
 	grid-template-rows: min-content min-content 1fr min-content;
 	gap: 20px;
+
+	background-color: var(--bg);
 }
 
 .index-page__main {
