does the processing of the fields when editing and writes to the state. ready to be sent to the server.

--- a/frontend/src/components/reports-list/reports-list-item/card-edit/card-edit.scss
+++ b/frontend/src/components/reports-list/reports-list-item/card-edit/card-edit.scss
@@ -84,6 +84,7 @@
 
 .card-edit__unit-input:checked ~ .card-edit__unit-label-text {
 	color: var(--text-primary);
+	border-color: var(--text-primary);
 }
 
 .card-edit__controls {
