--- a/frontend/src/pages/index-page/index-page.scss
+++ b/frontend/src/pages/index-page/index-page.scss
@@ -6,7 +6,7 @@
 
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: min-content min-content 1fr min-content;
+	grid-template-rows: min-content min-content min-content 1fr min-content;
 	gap: 20px;
 
 	background-color: var(--bg);
