add load more button logick

--- a/frontend/src/components/load-more-button/load-more-button.scss
+++ b/frontend/src/components/load-more-button/load-more-button.scss
@@ -18,4 +18,13 @@
 	&:hover {
 		background-color: var(--overlay);
 	}
+
+	&:disabled {
+		opacity: 0.4;
+		pointer-events: none;
+
+		&:hover {
+			background-color: var(--surface);
+		}
+	}
 }
