--- a/frontend/src/components/filter/filter.scss
+++ b/frontend/src/components/filter/filter.scss
@@ -1,3 +1,5 @@
+@import '../../variables/variables.scss';
+
 .filter {
 	width: 100%;
 	padding: 10px 0;
@@ -17,6 +19,13 @@
 	gap: 10px;
 
 	cursor: pointer;
+
+	@media (max-width: $mobile-width) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+		gap: 5px;
+	 }
 
 	&:focus-within .filter__item-name {
 		color: var(--primary);
@@ -60,6 +69,11 @@
 	border: 1px solid var(--overlay);
 
 	cursor: pointer;
+
+	@media (max-width: $mobile-width) {
+		top: 100%;
+		transform: translateY(-100%);
+	}
 
 	&:hover,
 	&:focus {
