--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,3 +1,5 @@
+@import '../../variables/variables.scss';
+
 .header {
 	width: 100%;
 	padding: 20px 0;
@@ -6,6 +8,13 @@
 	justify-content: flex-start;
 	align-items: center;
 	gap: 30px;
+
+	@media (max-width: $mobile-width) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+		gap: 10px;
+	}
 }
 
 .header__title {
