--- a/frontend/src/components/reports-list/reports-list-item/reports-list-item.scss
+++ b/frontend/src/components/reports-list/reports-list-item/reports-list-item.scss
@@ -1,7 +1,14 @@
+@import '../../../variables/variables.scss';
+
 .card {
   position: relative;
-  width: 250px;
+  // width: 250px;
+	width: auto;
   min-height: 210px;
+
+	@media (max-width: $mobile-width) {
+		width: 100%;
+	}
 
 	&--edit .card__inner {
 		bottom: auto;
@@ -34,6 +41,12 @@
 
 	&--edit .card__control {
 		opacity: 1;
+	}
+
+	@media (max-width: $tablet-width) {
+		.card__control {
+			opacity: 1;
+		}
 	}
 }
 
