--- a/frontend/src/components/reports-list/reports-list.scss
+++ b/frontend/src/components/reports-list/reports-list.scss
@@ -1,3 +1,5 @@
+@import '../../variables/variables.scss';
+
 .reports-list {
 	display: flex;
 	flex-flow: row wrap;
@@ -5,4 +7,17 @@
 	gap: 20px;
 
 	list-style: none;
+
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+
+	@media (max-width: $tablet-width) {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	@media (max-width: $mobile-width) {
+		display: grid;
+		grid-template-columns: 1fr;
+	}
 }
