--- a/frontend/src/components/sort/sort.scss
+++ b/frontend/src/components/sort/sort.scss
@@ -1,3 +1,5 @@
+@import '../../variables/variables.scss';
+
 .sort {
 	width: 100%;
 	display: grid;
@@ -16,4 +18,11 @@
 	justify-content: flex-start;
 	align-items: center;
 	gap: 20px;
+
+	@media (max-width: $mobile-width) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+		gap: 10px;
+	}
 }
